--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
 
             <a target="_blank" href="https://github.com/rafavirginio">
-                <li class="images-and-text"> <img src="./images/github.png">Rafa Virginio</li>
+                <li class="images-and-text"> <img src="./images/github.png">Rafael Virginio</li>
         </ul>
     </div>
 
