--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             </a>
             <a target="_blank" href="https://www.linkedin.com/in/rafael-virg%C3%ADnio-da-silva-288a8468/">
-                <li class="images-and-text"> <img src="./images/linkedin.png">Rafael Virginio</li>
+                <li class="images-and-text"> <img src="./images/linkedin.png">Rafael Virginio da Silva</li>
             </a>
 
             <a target="_blank" href="https://github.com/rafavirginio">
